# CUDAgent

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  PACKAGING.md  README.md  TESTING.md  build.py  package-lock.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.md  setup.py  setup_api_keys.py  test_ai_agents.py  test_cudagent.py  test_enhanced_cudagent.py  test_enhanced_cudagent_cpu.py  test_logging.py
apps/cli/: README.md  pyproject.toml
apps/cli/cuda_agent_cli/: main.py
apps/cli/cuda_agent_cli.egg-info/: SOURCES.txt  requires.txt
apps/web/: .env.example  .gitignore  README.md  next.config.mjs  package-lock.json  package.json  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/coach/: page.tsx
apps/web/app/playground/: page.tsx
apps/web/components/: CoachChat.tsx  CopyButton.tsx  Markdown.tsx  PlaygroundEditor.tsx
cudagent/: __init__.py  _version.py
cudagent/agents/: __init__.py  config_manager.py  kernel_optimizer.py  llm_agent.py  performance_advisor.py  validation_agent.py
cudagent/cli/: __init__.py  benchmark.py  optimize.py  setup.py  test.py
cudagent/core/: __init__.py  enhanced_optimizer.py  optimizer.py
cudagent/examples/: __init__.py  basic_optimization.py  basic_usage.py  benchmark_example.py  llm_optimization.py
cudagent/parsers/: __init__.py  operation_capture.py  pytorch_parser.py
cudagent/profiling/: __init__.py  benchmarker.py
cudagent/utils/: __init__.py  enhanced_kernel_generator.py  kernel_generator.py  validation.py
docs/: README.md  conf.py  index.rst
pkgs/core/: pyproject.toml
pkgs/core/cuda_agent_core/: __init__.py
pkgs/core/cuda_agent_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
pkgs/core/cuda_agent_core/llm/: __init__.py  client.py
tools/scripts/: llm_example.py
