[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "cudagent"
dynamic = ["version"]
description = "AI-Powered CUDA Kernel Optimization for GPU Engineers"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "CUDAgent Team", email = "contact@cudagent.ai"}
]
maintainers = [
    {name = "CUDAgent Team", email = "contact@cudagent.ai"}
]
keywords = ["cuda", "gpu", "optimization", "ai", "llm", "pytorch", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Hardware :: Symmetric Multi-processing",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.19.0",
    "requests>=2.25.0",
    "pyyaml>=5.4.0",
    "tqdm>=4.60.0",
    "psutil>=5.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.8",
    "mypy>=0.800",
    "pre-commit>=2.0",
]
gpu = [
    "torch>=1.9.0",
    "torchvision>=0.10.0",
]
llm = [
    "openai>=1.0.0",
    "anthropic>=0.5.0",
]
plotting = [
    "matplotlib>=3.3.0",
    "seaborn>=0.11.0",
]
all = [
    "torch>=1.9.0",
    "torchvision>=0.10.0",
    "openai>=1.0.0",
    "anthropic>=0.5.0",
    "matplotlib>=3.3.0",
    "seaborn>=0.11.0",
]

[project.urls]
Homepage = "https://github.com/cudagent/cudagent"
Documentation = "https://docs.cudagent.ai"
Repository = "https://github.com/cudagent/cudagent"
"Bug Tracker" = "https://github.com/cudagent/cudagent/issues"
"Source Code" = "https://github.com/cudagent/cudagent"

[project.scripts]
cudagent = "cudagent.cli:main"
cudagent-setup = "cudagent.cli.setup:main"
cudagent-test = "cudagent.cli.test:main"
cudagent-optimize = "cudagent.cli.optimize:main"
cudagent-benchmark = "cudagent.cli.benchmark:main"

[tool.setuptools_scm]
write_to = "cudagent/_version.py"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=cudagent",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests that require GPU",
    "llm: marks tests that require LLM API",
] 