[project]
name = "cuda-agent-cli"
version = "0.1.0"
description = "CLI + FastAPI service for CUDAgent"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2,<3",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
